--- a/style.css
+++ b/style.css
@@ -1,3 +1,75 @@
-body{
-    
+body {
+  background-color: black;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.card {
+  backdrop-filter: blur(7px) saturate(71%);
+  -webkit-backdrop-filter: blur(7px) saturate(71%);
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.18);
+}
+
+#timer {
+  font-size: 7rem;
+  color: #4820fa;
+  font-weight: 800;
+  text-shadow: 2px 2px #f8a5c2;
+  text-align: center;
+  width: 500px;
+  margin: 3rem auto;
+}
+
+#buttons {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  background-color: #f92672;
+  color: white;
+  border: none;
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 1.5rem 4rem;
+  margin: 1rem;
+  border-radius: 2rem;
+  cursor: pointer;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease-in-out;
+}
+
+button:hover {
+  background-color: #4158d0;
+  background-image: linear-gradient(
+    43deg,
+    #4158d0 0%,
+    #c850c0 30%,
+    #ffcc70 66%,
+    #ffffff 100%
+  );
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+button[disabled] {
+  opacity: 0.5;
+  cursor: default;
+}
+
+@media (max-width: 800px) {
+  #timer {
+    font-size: 4rem;
+    width: 400px;
+  }
+  button {
+    font-size: 1.5rem;
+    padding: 1rem 2rem;
+  }
 }
